--- a/schedule.html
+++ b/schedule.html
@@ -7,6 +7,7 @@
     <title>Your Day schedule</title>
     <link rel="stylesheet" href="schedule.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
@@ -14,8 +15,9 @@
     <header class="text-center font-weight-bold">Workday Schedule</header> 
     <div class="container">
     <div class=row>
-    <div class="text-right col-6">Simple Workday schedule</div>
-    <div class="col-6" id="date"></div>
+    <div class="text-center col-12">Simple Workday schedule</div>
+    <div class="row"></div>
+    <div class="col-12 text-center" id="date"></div>
     </div>
     </div>
     <div class="m-4"></div>
@@ -23,7 +25,7 @@
         <div class="row" id="hour-1">
                 <div class="col-12">
                 <div class="input-group mb-3">
-                        <span class="input-group-text bg-white" id="first-time">9 A.M</span> 
+                        <span class="input-group-text bg-white">9 A.M</span> 
                         <textarea class="form-control" placeholder="Your Activity Here" aria-label="With textarea" id="text_1"></textarea>
                     <div class="input-group-append"> 
                       <button class="btn btn-outline-secondary" type="button" id="button-addon2">&#9756</button>
@@ -34,7 +36,7 @@
         <div class="row" id="hour-2">
         <div class="col-12">
         <div class="input-group mb-3">
-                <span class="input-group-text bg-white bg-white" id="second-time">10 A.M</span> 
+                <span class="input-group-text bg-white bg-white">10 A.M</span> 
                 <textarea class="form-control" placeholder="Your Activity Here" aria-label="With textarea"></textarea>
             <div class="input-group-append"> 
               <button class="btn btn-outline-secondary" type="button" id="button-addon2">&#9756</button>
@@ -45,7 +47,7 @@
         <div class="row" id="hour-3">
                 <div class="col-12">
                 <div class="input-group mb-3">
-                        <span class="input-group-text bg-white" id="third-time">11 A.M</span> 
+                        <span class="input-group-text bg-white">11 A.M</span> 
                         <textarea class="form-control" placeholder="Your Activity Here" aria-label="With textarea"></textarea>
                     <div class="input-group-append"> 
                       <button class="btn btn-outline-secondary" type="button" id="button-addon2">&#9756</button>
@@ -56,7 +58,7 @@
                 <div class="row" id="hour-4">
                         <div class="col-12">
                         <div class="input-group mb-3">
-                                <span class="input-group-text bg-white" id="fourth-time">12 P.M</span> 
+                                <span class="input-group-text bg-white">12 P.M</span> 
                                 <textarea class="form-control" placeholder="Your Activity Here" aria-label="With textarea"></textarea>
                             <div class="input-group-append"> 
                               <button class="btn btn-outline-secondary" type="button" id="button-addon2">&#9756</button>
@@ -67,7 +69,7 @@
                         <div class="row" id="hour-5">
                                 <div class="col-12">
                                 <div class="input-group mb-3">
-                                        <span class="input-group-text bg-white" id="fifth-time">1 P.M</span> 
+                                        <span class="input-group-text bg-white" >1 P.M</span> 
                                         <textarea class="form-control" placeholder="Your Activity Here" aria-label="With textarea"></textarea>
                                     <div class="input-group-append"> 
                                       <button class="btn btn-outline-secondary" type="button" id="button-addon2">&#9756</button>
@@ -76,9 +78,20 @@
                                 </div>
                                 </div>
                                 <div class="row" id="hour-6">
+                                  <div class="col-12">
+                                  <div class="input-group mb-3">
+                                          <span class="input-group-text bg-white" >2 P.M</span> 
+                                          <textarea class="form-control" placeholder="Your Activity Here" aria-label="With textarea"></textarea>
+                                      <div class="input-group-append"> 
+                                        <button class="btn btn-outline-secondary" type="button" id="button-addon2">&#9756</button>
+                                      </div>
+                                  </div>
+                                  </div>
+                                  </div>
+                                <div class="row" id="hour-7">
                                         <div class="col-12">
                                         <div class="input-group mb-3">
-                                                <span class="input-group-text bg-white" id="sixth-time">3 P.M</span> 
+                                                <span class="input-group-text bg-white">3 P.M</span> 
                                                 <textarea class="form-control" placeholder="Your Activity Here" aria-label="With textarea"></textarea>
                                             <div class="input-group-append"> 
                                               <button class="btn btn-outline-secondary" type="button" id="button-addon2">&#9756</button>
@@ -86,10 +99,10 @@
                                         </div>
                                         </div>
                                         </div>
-                                        <div class="row" id="hour-7">
+                                        <div class="row" id="hour-8">
                                                 <div class="col-12">
                                                 <div class="input-group mb-3">
-                                                        <span class="input-group-text bg-white" id="seventh-time">4 P.M</span> 
+                                                        <span class="input-group-text bg-white">4 P.M</span> 
                                                         <textarea class="form-control" placeholder="Your Activity Here" aria-label="With textarea"></textarea>
                                                     <div class="input-group-append"> 
                                                       <button class="btn btn-outline-secondary" type="button" id="button-addon2">&#9756</button>
@@ -97,10 +110,10 @@
                                                 </div>
                                                 </div>
                                                 </div>
-                                                <div class="row" id="hour-8">
+                                                <div class="row" id="hour-9">
                                                         <div class="col-12">
                                                         <div class="input-group mb-3">
-                                                                <span class="input-group-text bg-white" id="eight-time">5 P.M</span> 
+                                                                <span class="input-group-text bg-white">5 P.M</span> 
                                                                 <textarea class="form-control" placeholder="Your Activity Here" aria-label="With textarea"></textarea>
                                                             <div class="input-group-append"> 
                                                               <button class="btn btn-outline-secondary" type="button" id="button-addon2">&#9756</button>
@@ -112,7 +125,7 @@
               
          </div>
          <div class="row">
-        <div class="col-12">
+        <div class="col-7">
          <button type="button" class="btn btn-danger float-right btn-lg mr-4" id="clear">Clear</button> 
           </div>
           </div>
