colors hs been added to background when time changes

--- a/schedule.html
+++ b/schedule.html
@@ -69,7 +69,7 @@
                         <div class="row" id="hour-5">
                                 <div class="col-12">
                                 <div class="input-group mb-3">
-                                        <span class="input-group-text bg-white" >1 P.M</span> 
+                                        <span class="input-group-text bg-white" id="time_5">1 P.M</span> 
                                         <textarea class="form-control" placeholder="Your Activity Here" aria-label="With textarea"></textarea>
                                     <div class="input-group-append"> 
                                       <button class="btn btn-outline-secondary" type="button" id="button-addon2">&#9756</button>
@@ -80,7 +80,7 @@
                                 <div class="row" id="hour-6">
                                   <div class="col-12">
                                   <div class="input-group mb-3">
-                                          <span class="input-group-text bg-white" >2 P.M</span> 
+                                          <span class="input-group-text bg-white" id="time_6">2 P.M</span> 
                                           <textarea class="form-control" placeholder="Your Activity Here" aria-label="With textarea"></textarea>
                                       <div class="input-group-append"> 
                                         <button class="btn btn-outline-secondary" type="button" id="button-addon2">&#9756</button>
@@ -91,7 +91,7 @@
                                 <div class="row" id="hour-7">
                                         <div class="col-12">
                                         <div class="input-group mb-3">
-                                                <span class="input-group-text bg-white">3 P.M</span> 
+                                                <span class="input-group-text bg-white" id ="time_7">3 P.M</span> 
                                                 <textarea class="form-control" placeholder="Your Activity Here" aria-label="With textarea"></textarea>
                                             <div class="input-group-append"> 
                                               <button class="btn btn-outline-secondary" type="button" id="button-addon2">&#9756</button>
