removed a small typo in the html

--- a/schedule.html
+++ b/schedule.html
@@ -69,7 +69,7 @@
                         <div class="row" id="hour-5">
                                 <div class="col-12">
                                 <div class="input-group mb-3">
-                                        <span class="input-group-text bg-white"><span>1 P.M</span> 
+                                        <span class="input-group-text bg-white">1 P.M</span> 
                                         <textarea class="form-control" placeholder="Your Activity Here" aria-label="With textarea"></textarea>
                                     <div class="input-group-append"> 
                                       <button class="btn btn-outline-secondary" type="button" id="button-addon2">&#9756</button>
