--- a/schedule.html
+++ b/schedule.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" />
 </head>
 <body>
     <div class="m-4"></div>
@@ -28,7 +29,7 @@
                         <span class="input-group-text bg-white">9 A.M</span> 
                         <textarea class="form-control" placeholder="Your Activity Here" aria-label="With textarea" id="text_1"></textarea>
                     <div class="input-group-append"> 
-                      <button class="btn btn-outline-secondary" type="button" id="button-addon2">&#9756</button>
+                      <button class="btn btn-outline-secondary" type="button" id="button-addon2"><i class="fas fa-upload"></i></button>
                     </div>
                 </div>
                 </div>
@@ -39,7 +40,7 @@
                 <span class="input-group-text bg-white bg-white">10 A.M</span> 
                 <textarea class="form-control" placeholder="Your Activity Here" aria-label="With textarea"></textarea>
             <div class="input-group-append"> 
-              <button class="btn btn-outline-secondary" type="button" id="button-addon2">&#9756</button>
+              <button class="btn btn-outline-secondary" type="button" id="button-addon2"><i class="fas fa-upload"></i></button>
             </div>
         </div>
         </div>
@@ -50,7 +51,7 @@
                         <span class="input-group-text bg-white">11 A.M</span> 
                         <textarea class="form-control" placeholder="Your Activity Here" aria-label="With textarea"></textarea>
                     <div class="input-group-append"> 
-                      <button class="btn btn-outline-secondary" type="button" id="button-addon2">&#9756</button>
+                      <button class="btn btn-outline-secondary" type="button" id="button-addon2"><i class="fas fa-upload"></i></button>
                     </div>
                 </div>
                 </div>
@@ -61,7 +62,7 @@
                                 <span class="input-group-text bg-white">12 P.M</span> 
                                 <textarea class="form-control" placeholder="Your Activity Here" aria-label="With textarea"></textarea>
                             <div class="input-group-append"> 
-                              <button class="btn btn-outline-secondary" type="button" id="button-addon2">&#9756</button>
+                              <button class="btn btn-outline-secondary" type="button" id="button-addon2"><i class="fas fa-upload"></i></button>
                             </div>
                         </div>
                         </div>
@@ -72,7 +73,7 @@
                                         <span class="input-group-text bg-white">1 P.M</span> 
                                         <textarea class="form-control" placeholder="Your Activity Here" aria-label="With textarea"></textarea>
                                     <div class="input-group-append"> 
-                                      <button class="btn btn-outline-secondary" type="button" id="button-addon2">&#9756</button>
+                                      <button class="btn btn-outline-secondary" type="button" id="button-addon2"><i class="fas fa-upload"></i></button>
                                     </div>
                                 </div>
                                 </div>
@@ -83,7 +84,7 @@
                                           <span class="input-group-text bg-white">2 P.M</span> 
                                           <textarea class="form-control" placeholder="Your Activity Here" aria-label="With textarea"></textarea>
                                       <div class="input-group-append"> 
-                                        <button class="btn btn-outline-secondary" type="button" id="button-addon2">&#9756</button>
+                                        <button class="btn btn-outline-secondary" type="button" id="button-addon2"><i class="fas fa-upload"></i></button>
                                       </div>
                                   </div>
                                   </div>
@@ -94,7 +95,7 @@
                                                 <span class="input-group-text bg-white">3 P.M</span> 
                                                 <textarea class="form-control" placeholder="Your Activity Here" aria-label="With textarea"></textarea>
                                             <div class="input-group-append"> 
-                                              <button class="btn btn-outline-secondary" type="button" id="button-addon2">&#9756</button>
+                                              <button class="btn btn-outline-secondary" type="button" id="button-addon2"><i class="fas fa-upload"></i></button>
                                             </div>
                                         </div>
                                         </div>
@@ -105,7 +106,7 @@
                                                         <span class="input-group-text bg-white">4 P.M</span> 
                                                         <textarea class="form-control" placeholder="Your Activity Here" aria-label="With textarea"></textarea>
                                                     <div class="input-group-append"> 
-                                                      <button class="btn btn-outline-secondary" type="button" id="button-addon2">&#9756</button>
+                                                      <button class="btn btn-outline-secondary" type="button" id="button-addon2"><i class="fas fa-upload"></i></button>
                                                     </div>
                                                 </div>
                                                 </div>
@@ -116,7 +117,7 @@
                                                                 <span class="input-group-text bg-white">5 P.M</span> 
                                                                 <textarea class="form-control" placeholder="Your Activity Here" aria-label="With textarea"></textarea>
                                                             <div class="input-group-append"> 
-                                                              <button class="btn btn-outline-secondary" type="button" id="button-addon2">&#9756</button>
+                                                              <button class="btn btn-outline-secondary" type="button" id="button-addon2"><i class="fas fa-upload"></i></button>
                                                             </div>
                                                         </div>
                                                         </div>
@@ -125,10 +126,10 @@
               
          </div>
          <div class="row">
-        <div class="col-7">
-         <button type="button" class="btn btn-danger float-right btn-lg mr-4" id="clear">Clear</button> 
+          <div class="col-7 text-center">
+              <button type="button" class="btn btn-danger btn-lg" id="clear">Clear Your Schedule</button> 
           </div>
-          </div>
+        </div>
 
 
 
